--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/http-client": "8.0.*",
         "symfony/intl": "8.0.*",
         "symfony/mailer": "8.0.*",
+        "symfony/messenger": "8.0.*",
         "symfony/mime": "8.0.*",
         "symfony/monolog-bundle": "^3.0|^4.0",
         "symfony/notifier": "8.0.*",
@@ -99,11 +100,13 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^13.0",
+        "psalm/plugin-symfony": "^5.3",
         "symfony/browser-kit": "8.0.*",
         "symfony/css-selector": "8.0.*",
         "symfony/debug-bundle": "8.0.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/stopwatch": "8.0.*",
-        "symfony/web-profiler-bundle": "8.0.*"
+        "symfony/web-profiler-bundle": "8.0.*",
+        "vimeo/psalm": "^6.15"
     }
 }
