install package from fork without cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install psalm/plugin-symfony from fork
         run: |
           composer config repositories.psalm-plugin-symfony vcs https://github.com/tunterreitmeier/psalm-plugin-symfony
-          composer require --dev psalm/plugin-symfony:dev-fix/mark-symfony-usages --no-scripts --no-progress
+          composer require --dev psalm/plugin-symfony:dev-fix/mark-symfony-usages --no-scripts --no-progress --no-cache
 
       - name: Run Psalm with symfony plugin (showcase)
         run: vendor/bin/psalm --no-progress --no-cache --output-format=github
